Mejoras de consistencia de diseño en UI